mobile header. it can't be static top on mobile but other issues resolved. Also, for header-mobile.html padding issues solved

--- a/css/custom-styles.scss
+++ b/css/custom-styles.scss
@@ -359,7 +359,7 @@ $h-line-height: 1.3em;
 
 /* Navigation - For Mega Menu styles see yamm.css */
 .affix{ /*Bootstrap style for sticky navbar*/
-    position: fixed;
+   position: relative;
     width: 100%;
 }
 
@@ -1861,13 +1861,15 @@ footer{
 
     /* Mobile Footer Styling*/
     .SA-navbar-brand {
-        padding: 10px 5px 5px 10px;
+        padding: 10px 5px 5px 15px;
     }
 
     .SA-mobile-nav-header {
         color: #fff;
         float: left;
         text-align: left;
-        font-size: .75em;
+        font-size: .72em;
+        font-weight: 700;
         width: 230px;
+        padding: 0px 0px 0px 20px;
     }
